[gd_scene load_steps=8 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://maps/Rooms/room_placeholder.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Audio/DeathSound.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/classes/room_variables.gd" type="Script" id=10]
[ext_resource path="res://Pause.tscn" type="PackedScene" id=11]
[ext_resource path="res://loading_time.gd" type="Script" id=12]

[node name="World" type="Node2D"]
position = Vector2( 0, -2 )
script = ExtResource( 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 11 )]

[node name="room_variables" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -1985, 85 )
collision_mask = 17
debug = false

[node name="Timer" type="Timer" parent="Player"]
one_shot = true
autostart = true
script = ExtResource( 12 )

[node name="room detector" parent="." instance=ExtResource( 2 )]
room_id = "start_room"
left_opening = true
right_opening = true
top_opening = true
bottom_opening = true
local_spawn_active = true

[node name="PlayerDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Player/Timer" to="Player/Timer" method="_on_Timer_timeout"]
[connection signal="finished" from="PlayerDeath" to="." method="_on_PlayerDeath_finished"]
